# unit-tests-for-static-functions

./: README.md  example.c  example.h  meson.build  otherfile.c  otherfile.h  test-example.c
